# libkdbx

./: CMakeLists.txt
src/: entry.cpp  entry.hpp  errors.hpp  future.hpp  group.cpp  group.hpp  hashbuf.cpp  hashbuf.hpp  io.hpp  kdbx.cpp  kdbx.hpp
tests/: simple.kdbx
